@@ -39,6 +39,7 @@
 - Give the compile time option of using 32-bit integers for the database IDs
   instead of 64-bit integers. This is useful where htobe64()/be64toh() are not
   available or for embedded systems for example.
+- The DUP bit is now set correctly when resending PUBREL messages.
 
 0.8.3 - 20101004
 ================
